F&GDEV/src/objects/User.object
<CustomObject>
    <fields>
        <fullName>ByPassTrigger__c</fullName>
        <label>By pass trigger</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TH_MARKETINGMATERIALSHANDLER</fullName>
                </value>
                <value>
                    <fullName>TH_POLICYSTATEHANDLER</fullName>
                </value>
                <value>
                    <fullName>TH_PRODUCTSTATEPOLICYASSOCHANDLER</fullName>
                </value>
                <value>
                    <fullName>TH_PRODUCTSPECIFICATIONHANDLER</fullName>
                </value>
                <value>
                    <fullName>TH_PRODUCTSTATEHANDLER</fullName>
                </value>
                <value>
                    <fullName>TH_PROJECTHANDLER</fullName>
                </value>
                <value>
                    <fullName>TH_POLICYFORMDETAILHANDLER</fullName>
                </value>
                <value>
                    <fullName>TH_APPROVALSTATE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ByPassValidation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>By Pass Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__LOOPlus_Tester__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this box will allow this user to run LOOPlus on a staging environment when testing is available. When enabled, the LOOPlus page will take slightly longer to load.</inlineHelpText>
        <label>LOOP Plus Tester</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__dsPassword__c</fullName>
        <label>DocuSign Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__dsToken__c</fullName>
        <label>DocuSign API UserName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>Active_Permission_Set_Type</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MOBILE_USER</columns>
        <columns>SFCONTENT_USER</columns>
        <columns>KNOWLEDGE_USER</columns>
        <columns>MARKETING_USER</columns>
        <columns>OFFLINE_USER</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Permission Set Type</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>All_Users_by_Dept</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Users by Dept</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>